# Scraplet

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.venv311sp/: pyvenv.cfg
.venv311sp/Scripts/: activate  activate.bat
src/: __init__.py  cli.py  config.py  llm.py
src/agent/: __init__.py  approval.py  diff_view.py  executor.py  orchestrator.py  tools.py  tracker.py  types.py
src/ask/: __init__.py  orchestrator.py
src/memory/: memory_manager.py  types.py  vector_store.py
src/plan/: __init__.py  office_tools.py  orchestrator.py  planner.py  selection.py  types.py  web_tools.py
src/telegram/: auth.py  bot.py  handlers.py  sessions.py
src/ui/: markdown.py  wakeup.py
src/voice/: orchestrator.py  stt.py  tts.py
