[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scraplet"
version = "0.1.0"
dependencies = [
    "typer",
    "rich",
    "questionary",
    "python-dotenv",
    "langchain-core",
    "langchain-openai",
    "chromadb",
    "requests",
    "pydantic"
]

[project.scripts]
scraplet = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]